--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
